scrollbar ui bug ok

--- a/src/components/ui/modals/noteEditor/noteEditor.scss
+++ b/src/components/ui/modals/noteEditor/noteEditor.scss
@@ -81,7 +81,6 @@
     width: 100%;
     height: 100%;
     overflow: scroll;
-    padding: 0.2em;
 
     ul {
       list-style: disc outside none;
